--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <meta property="og:type" content="product" />
   <meta property="og:title" content="5000+ Premium Backlink Listesi" />
   <meta property="og:description" content="DA/PA + Dofollow/Nofollow verileriyle düzenlenmiş 5000+ premium backlink. Sadece 1.000 TL." />
-  <meta property="og:image" content="https://mebularts.github.io/premium-backlink-list-2025/og-image.jpg" />
+  <meta property="og:image" content="https://mebularts.github.io/premium-backlink-list-2025/og-image.png" />
   <meta property="og:url" content="https://mebularts.github.io/premium-backlink-list-2025/" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="5000+ Premium Backlink Listesi" />
   <meta name="twitter:description" content="DA/PA + Dofollow/Nofollow ile 5000+ premium backlink. 1.000 TL." />
-  <meta name="twitter:image" content="https://mebularts.github.io/premium-backlink-list-2025/og-image.jpg" />
+  <meta name="twitter:image" content="https://mebularts.github.io/premium-backlink-list-2025/og-image.png" />
 
   <!-- Favicon (opsiyonel) -->
   <link rel="icon" href="favicon.ico" />
@@ -92,7 +92,7 @@
       font-weight:900;font-size:28px;display:inline-flex;align-items:center;gap:10px;
       background:linear-gradient(135deg,#fff,#d7caff);-webkit-background-clip:text;background-clip:text;color:transparent;
     }
-    .price small{font-weight:700;color:#fff;opacity:.7;background:transparent}
+    .price small{font-weight:700;color:#fff;opacity:.7;background:transparent;text-decoration: line-through;font-style:italic;}
     .badge{background:linear-gradient(135deg,var(--warning),#ffe88f);color:#1a1200;font-weight:800;border-radius:999px;padding:6px 10px}
     .cta{display:flex;gap:12px;flex-wrap:wrap;margin-top:22px}
 
@@ -170,7 +170,7 @@
         <div class="hero-cards">
           <div class="card">
             <div class="h">
-              <span class="price">1.000 TL <small>(~15.000 TL yerine)</small></span>
+              <span class="price">1.000 TL <small>(~15.000 TL)</small></span>
               <span class="badge">Sınırlı Süre</span>
             </div>
             <div class="muted">5000+ site • DA/PA • Dofollow/Nofollow • 8 kategori + Other</div>
@@ -246,7 +246,7 @@
       <div class="card" style="padding:24px">
         <div class="h">
           <h2 style="margin:0">Hemen Erişim Alın</h2>
-          <span class="price">1.000 TL <small>(~15.000 TL yerine)</small></span>
+          <span class="price">1.000 TL <small>(~15.000 TL)</small></span>
         </div>
         <p class="muted">Ödeme sonrası indirme bağlantısı/Google Drive erişimi iletilir.</p>
         <div class="cta">
