--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <a class="btn" href="#ozellikler">Özellikler</a>
         <a class="btn" href="#ornekler">Örnekler</a>
         <a class="btn" href="#sss">SSS</a>
-        <a class="btn btn-primary" href="#satinal"><i class="lucide-shopping-cart"></i> Satın Al – 1.000 TL</a>
+        <a class="btn btn-primary" target="_blank" href="https://wa.me/12513160268?text=Baclink%20Listesini%20Almak%20İstiyorum."><i class="lucide-shopping-cart"></i> Satın Al – 1.000 TL</a>
       </div>
     </div>
   </nav>
@@ -209,7 +209,6 @@
     </div>
   </section>
 
-  <!-- ÖRNEK TABLO -->
   <section id="ornekler" class="section">
     <div class="container">
       <h2>Yüksek DA/PA fakat pek bilinmeyen örnekler</h2>
@@ -226,7 +225,6 @@
             </tr>
           </thead>
           <tbody>
-            <!-- 6 satır: burayı kendi sitelerinle güncelle -->
             <tr><td>story.wallclassifieds.com</td><td>Content Sharing</td><td>66</td><td>59</td><td>Dofollow/Nofollow</td></tr>
             <tr><td>article.classifiedsfactor.com</td><td>Content Sharing</td><td>62</td><td>54</td><td>Dofollow</td></tr>
             <tr><td>blog.giganticlist.com</td><td>Web 2.0</td><td>71</td><td>61</td><td>Dofollow</td></tr>
@@ -236,7 +234,7 @@
           </tbody>
         </table>
       </div>
-      <p class="muted" style="margin-top:10px">Not: DA/PA metrikleri örnek niteliğindedir; pakette güncel değerler yer alır.</p>
+      <p class="muted" style="margin-top:10px">Not: Satın alacağınız listedeki tüm siteler güncel metriklerle hazırlanmıştır.</p>
     </div>
   </section>
 
@@ -253,7 +251,7 @@
           <a class="btn-primary" href="https://wa.me/12513160268?text=Merhaba,%205000%2B%20Backlink%20Listesi%20satın%20almak%20istiyorum." target="_blank" rel="noopener">
             <i class="lucide-message-circle"></i> WhatsApp ile Satın Al
           </a>
-          <a class="btn-ghost" href="https://t.me/mebularts?text=Merhaba,%205000%2B%20Backlink%20Listesi%20satın%20almak%20istiyorum.">
+          <a class="btn-ghost" href="https://t.me/mebularts?text=Merhaba,%205000%2B%20Backlink%20Listesi%20satın%20almak%20istiyorum." target="_blank" rel="noopener">
             <i class="lucide-mail"></i> Telegram ile Satın Al
           </a>
         </div>
