--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
         <div class="hero-cards">
           <div class="card">
             <div class="h">
-              <span class="price">1.000 TL <small>(~15.000 TL)</small></span>
-              <span class="badge">Sınırlı Süre</span>
+              <span class="price" style="font-size:21px;">1.000 TL <small style="font-size:x-small;">(~15.000 TL)</small></span>
+              <span class="badge" style="font-size:small;">Sınırlı Süre</span>
             </div>
             <div class="muted">5000+ site • DA/PA • Dofollow/Nofollow • 8 kategori + Other</div>
           </div>
