--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
   <section id="ornekler" class="section">
     <div class="container">
-      <h2>Yüksek DA/PA fakat pek bilinmeyen örnekler</h2>
+      <h2>Yüksek DA/PA metrikleriyle her zaman ileriye</h2>
       <p class="muted">Aşağıda paketten <em>örnek</em> 6 satır görüyorsunuz. Tam liste satın alındığında paylaşılıyor.</p>
       <div class="tablewrap">
         <table>
